# carpet

./: .typos.toml  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml
src/: dot.rs  iter.rs  lib.rs  read_only.rs  test.rs
